Tweaked loader position in html so that it is now outside evolution chain div, meaning it will not get cleared when evolution chain is being built via js. Also added html and css for noscript message

--- a/evolutions.css
+++ b/evolutions.css
@@ -318,3 +318,12 @@ label {
         rotate: 90deg;
     }
 }
+
+.alert {
+    border: 1px solid darkred;
+    background-color: honeydew;
+    color: black;
+    font-weight: 500;
+    font-size: 1.25rem;
+    padding: 1rem;
+}
