--- a/style.css
+++ b/style.css
@@ -133,6 +133,9 @@ li {
     gap: 20px;
     margin: 0;
     padding: 0;
+    text-align: start;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 #main-navbar li {
